scripts/nullaway/original/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8.txt
../original/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/query/Substitution.java:78: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return substitutions.get(var);
		^
    (see http://t.uber.com/nullaway )
../original/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/io/RDFFileReader.java:43: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return lines;
		^
    (see http://t.uber.com/nullaway )
../original/url5c7c5a5b36_taczge_rdf_store_tgz-pJ8-experiment_SATSolverExperimentJ8/src/solver/DecidablePLSATSolverTest.java:13: error: [NullAway] @NonNull static field sut not initialized
	private static PLSATSolver sut;
	                           ^
    (see http://t.uber.com/nullaway )
3 errors
